--- a/package.json
+++ b/package.json
@@ -21,8 +21,7 @@
     "lint": "eslint ./src",
     "lint:fix": "eslint ./src --fix --color",
     "prettier": "prettier ./src --check",
-    "prettier:fix": "prettier ./src --write",
-    "format": "npm run lint:fix && npm run prettier:fix"
+    "prettier:fix": "prettier ./src --write"
   },
   "eslintConfig": {
     "extends": [
@@ -36,9 +35,9 @@
     }
   },
   "lint-staged": {
-    ".js": [
+    "*.js": [
       "npm run lint:fix",
-      "npm run format",
+      "npm run prettier:fix",
       "git add"
     ]
   },
