--- a/.prettierrc
+++ b/.prettierrc
@@ -1,7 +1,9 @@
 {
   "singleQuote": true,
   "trailingComma": "es5",
-  "endOfLine": "lf",
+  "endOfLine": "auto",
   "printWidth": 120,
-  "semi": false
+  "semi": false,
+  "bracketSpacing": true,
+  "tabWidth": 2
 }
